Bug 805197 - Compute a region in LayerTreeInvalidation. r=roc